# cmake-test

./: README.md
include/: sum.h
src/: CMakeLists.txt  main.cpp  src-tool.sh  sum.cpp  testConfig.h.in
src/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
src/swig/: CMakeLists.txt  MyMathSwig.i  MysqrtSwig.i
src/swig/java/: .main.java.swp  CMakeLists.txt  main.java
src/swig/python/: CMakeLists.txt  test.py
src/test/: CMakeLists.txt
src/test/testlib/: CMakeLists.txt
src/test/testmath/: CMakeLists.txt  testmain.cpp
src/test/testsum/: CMakeLists.txt
